# contest-tglang

./: README.md
src/CodeCrawler/TgLang.CodeCrawler/Models/: GitHubFile.cs
src/TgLang.CodeCrawler/: Program.cs  TgLang.CodeCrawler.csproj  TgLang.CodeCrawler.sln
src/TgLang.CodeCrawler.Test/: GitHubServiceTests.cs  TgLang.CodeCrawler.Test.csproj
src/TgLang.CodeCrawler/Exceptions/: UnsupportedLanguageException.cs
src/TgLang.CodeCrawler/Extensions/: ISevericeCollectionExtensions.cs
src/TgLang.CodeCrawler/Models/: GitHubFile.cs  LanguageDef.cs
src/TgLang.CodeCrawler/Services/Contracts/: ICodeCrawlerService.cs  IGitHubService.cs  ILanguageDefService.cs
src/TgLang.CodeCrawler/Services/Implementations/: CodeCrawlerService.cs  GitHubService.cs  LanguageService.cs
src/code-crawler/TgLang.CodeCrawler/: Program.cs
src/code-crawler/TgLang.CodeCrawler.Test/: LanguageDefServiceTests.cs
src/code-crawler/TgLang.CodeCrawler/Models/: LanguageDef.cs
src/code-crawler/TgLang.CodeCrawler/Services/Contracts/: ICodeCrawlerService.cs
src/code-crawler/TgLang.CodeCrawler/Services/Implementations/: CodeCrawlerService.cs  GitHubService.cs
src/crawler/: TgLang.CodeCrawler.sln
src/crawler/TgLang.CodeCrawler/: TgLang.CodeCrawler.csproj
src/crawler/TgLang.CodeCrawler.Test/: GitHubServiceTests.cs
src/crawler/TgLang.CodeCrawler/Services/Contracts/: ILanguageDefService.cs
src/libtglang/: CMakeLists.txt  tglang.c
src/libtglang/onnxruntime-linux-x64-1.16.1/: GIT_COMMIT_ID
src/model/: script.py  script_run_notebook.ipynb
(+3 files in other folders)
